--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -26,7 +26,7 @@ jobs:
         settings-path: ${{ github.workspace }} # location for the settings.xml file
 
     - name: Build with Maven (multi-module)
-      run: mvn -B package --file pom.xml
+      run: mvn -B package --file owl2java-parent/pom.xml
 
     - name: Publish to GitHub Packages Apache Maven
       run: mvn -B deploy -s $GITHUB_WORKSPACE/settings.xml
