--- a/owl2java-parent/owl2java-plugin/pom.xml
+++ b/owl2java-parent/owl2java-plugin/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.github.piscisaureus.owl2java</groupId>
         <artifactId>owl2java-parent</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>2.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>owl2java-plugin</artifactId>
@@ -50,4 +50,24 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-plugin-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>default-descriptor</id>
+                        <goals>
+                            <goal>descriptor</goal>
+                        </goals>
+                        <configuration>
+                            <goalPrefix>owl2java</goalPrefix>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 </project>
