--- a/owl2java-parent/pom.xml
+++ b/owl2java-parent/pom.xml
@@ -28,6 +28,15 @@
         <junit.version>5.11.0</junit.version>
     </properties>
 
+
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>GitHub Repository</name>
+            <url>https://maven.pkg.github.com/Brigantinus/owl2java</url>
+        </repository>
+    </distributionManagement>
+
     <dependencyManagement>
         <dependencies>
             <dependency>
@@ -105,6 +114,11 @@
                     <groupId>org.codehaus.mojo</groupId>
                     <artifactId>build-helper-maven-plugin</artifactId>
                     <version>3.6.0</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-plugin-plugin</artifactId>
+                    <version>3.15.0</version>
                 </plugin>
                 <plugin>
                     <groupId>com.github.piscisaureus.owl2java</groupId>
