--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -29,6 +29,6 @@ jobs:
       run: mvn -B package --file owl2java-parent/pom.xml
 
     - name: Publish to GitHub Packages Apache Maven
-      run: mvn -B deploy -s $GITHUB_WORKSPACE/settings.xml
+      run: mvn -B deploy
       env:
-        GITHUB_TOKEN: ${{ github.token }}
+        GITHUB_TOKEN: ${{ secrets.BUILD_TOKEN }}
