--- a/owl2java-parent/demo/pom.xml
+++ b/owl2java-parent/demo/pom.xml
@@ -5,18 +5,14 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>demo</artifactId>
-    <name>demo</name>
-
     <parent>
-        <groupId>com.github.piscisaureus.owl2java</groupId>
+        <groupId>com.github.piscisaureus.fork.owl2java</groupId>
         <artifactId>owl2java-parent</artifactId>
-        <version>2.0-SNAPSHOT</version>
+        <version>2.0.0-SNAPSHOT</version>
     </parent>
 
-    <properties>
-        <spring-core.version>4.3.30.RELEASE</spring-core.version>
-    </properties>
+    <artifactId>demo</artifactId>
+    <name>demo</name>
 
     <dependencies>
         <dependency>
@@ -57,7 +53,7 @@
                 </executions>
             </plugin>
             <plugin>
-                <groupId>com.github.piscisaureus.owl2java</groupId>
+                <groupId>com.github.piscisaureus.fork.owl2java</groupId>
                 <artifactId>owl2java-plugin</artifactId>
                 <version>${project.version}</version>
                 <executions>
