--- a/owl2java-parent/owl2java/pom.xml
+++ b/owl2java-parent/owl2java/pom.xml
@@ -5,14 +5,14 @@
 
     <modelVersion>4.0.0</modelVersion>
 
+    <parent>
+        <groupId>com.github.piscisaureus.fork.owl2java</groupId>
+        <artifactId>owl2java-parent</artifactId>
+        <version>2.0.0-SNAPSHOT</version>
+    </parent>
+
     <artifactId>owl2java</artifactId>
     <name>owl2java</name>
-
-    <parent>
-        <groupId>com.github.piscisaureus.owl2java</groupId>
-        <artifactId>owl2java-parent</artifactId>
-        <version>2.0-SNAPSHOT</version>
-    </parent>
 
     <dependencies>
         <dependency>
