--- a/owl2java-parent/owlstructure/pom.xml
+++ b/owl2java-parent/owlstructure/pom.xml
@@ -5,18 +5,14 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>owlstructure</artifactId>
-    <name>owlstructure</name>
-
     <parent>
-        <groupId>com.github.piscisaureus.owl2java</groupId>
+        <groupId>com.github.piscisaureus.fork.owl2java</groupId>
         <artifactId>owl2java-parent</artifactId>
-        <version>2.0-SNAPSHOT</version>
+        <version>2.0.0-SNAPSHOT</version>
     </parent>
 
-    <properties>
-        <spring-core.version>4.3.30.RELEASE</spring-core.version>
-    </properties>
+    <artifactId>owlstructure</artifactId>
+    <name>owlstructure</name>
 
     <dependencies>
         <dependency>
