--- a/owl2java-parent/pom.xml
+++ b/owl2java-parent/pom.xml
@@ -3,9 +3,9 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.github.piscisaureus.owl2java</groupId>
+    <groupId>com.github.piscisaureus.fork.owl2java</groupId>
     <artifactId>owl2java-parent</artifactId>
-    <version>2.0-SNAPSHOT</version>
+    <version>2.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>owl2java-parent</name>
 
@@ -128,7 +128,6 @@
             </plugins>
         </pluginManagement>
         <plugins>
-            <!-- Example of a common plugin, such as the Maven compiler plugin -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
