--- a/owl2java-parent/pom.xml
+++ b/owl2java-parent/pom.xml
@@ -40,13 +40,13 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
-                <groupId>com.github.piscisaureus.owl2java</groupId>
+                <groupId>com.github.piscisaureus.fork.owl2java</groupId>
                 <artifactId>owlstructure</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <dependency>
-                <groupId>com.github.piscisaureus.owl2java</groupId>
+                <groupId>com.github.piscisaureus.fork.owl2java</groupId>
                 <artifactId>owl2java</artifactId>
                 <version>${project.version}</version>
             </dependency>
@@ -121,7 +121,7 @@
                     <version>3.15.0</version>
                 </plugin>
                 <plugin>
-                    <groupId>com.github.piscisaureus.owl2java</groupId>
+                    <groupId>com.github.piscisaureus.fork.owl2java</groupId>
                     <artifactId>owl2java-plugin</artifactId>
                     <version>${project.version}</version>
                 </plugin>
