--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -29,6 +29,6 @@ jobs:
       run: mvn -B package --file owl2java-parent/pom.xml
 
     - name: Publish to GitHub Packages Apache Maven
-      run: mvn -B deploy
+      run: mvn -B deploy --file owl2java-parent/pom.xml
       env:
         GITHUB_TOKEN: ${{ secrets.BUILD_TOKEN }}
